--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,9 +1,6 @@
 image:
-  file: .gitpod.dockerfile
+  file: .gitpod.Dockerfile
+
 tasks:
- - init: . ${GITPOD_REPO_ROOT}/init_tasks.sh    
-vscode:
-  extensions:
-    - ms-python.python@2019.8.30787:TnGEOx35GXMhyKLjDGz9Aw==
-    - formulahendry.auto-close-tag@0.5.6:oZ/8R2VhZEhkHsoeO57hSw==
-    - mkaufman.HTMLHint@0.6.0:TdNYbCmjW8N3yiaPW4/adg==
+  - init: 'echo "TODO: Replace with init/build command"'
+    command: 'echo "TODO: Replace with command to start project"'
